<resources>
    <string name="app_name">Buy Sell Inventory</string>
    <string name="write_here">Write Here</string>
    <string name="reset_text">Reset</string>
    <string name="product_text">Product</string>
    <string name="customer_text">Customer</string>
    <string name="supplier_text">Supplier</string>
    <string name="buy_text">Buy</string>
    <string name="sell_text">Sell</string>
    <string name="statement_text">Report</string>
    <string name="holders_text">Holders</string>
    <string name="expenditure_mini_text">Exp.</string>
    <string name="share_text">Share</string>
    <string name="rate_us_text">Rate Us</string>
    <string name="feedback_text">Feedback</string>
    <string name="help_text">Help</string>
    <string name="ad_view_text">Ad View</string>
    <string name="log_out_text">Log out</string>
    <string name="welcome_text">Welcome!!</string>
    <string name="add_product_text">Add Product</string>
    <string name="add_customer_text">Add Customer</string>
    <string name="add_supplier_text">Add Supplier</string>
    <string name="name_text">Name</string>
    <string name="phone_text">Phone Number</string>
    <string name="buy_price_text">Buy Price</string>
    <string name="buy_percentage_text">Margin Percentage</string>
    <string name="sell_price_text">Sell Price</string>
    <string name="company_text">Company</string>
    <string name="save_text">Save</string>
    <string name="cancel_text">Cancel</string>
    <string name="city_text">City</string>
    <string name="address_text">Address</string>
    <string name="quantity_text">Quantity</string>
    <string name="price_text">Price</string>
    <string name="cash_text">Cash</string>
    <string name="on_hold_text">Borrow</string>
    <string name="history_by_supplier_text">History By Supplier</string>
    <string name="history_by_product_text">History By Product</string>
    <string name="history_text">History</string>
    <string name="today_text">Today</string>
    <string name="yesterday_text">Yesterday</string>
    <string name="this_month_text">This Month</string>
    <string name="last_month_text">Last Month</string>
    <string name="this_year_text">This Year</string>
    <string name="last_year_text">Last Year</string>
    <string name="from_text">From</string>
    <string name="to_text">To</string>
    <string name="can_not_undo_customer_money_text">Can Not Undo Because You Get Paid From Customer After Sell.</string>
    <string name="undo_sell_product">Undo Sell Product</string>
    <string name="can_not_undo_text">Can Not Undo Because You sold this Product After Buy.</string>
    <string name="can_not_undo_supplier_money_text">Can not be undone because the supplier has been paid after the purchase.</string>
    <string name="feedback_request_text">Something Is Wrong Please Send Feedback to Developer from Home Screen.</string>
    <string name="undo_buy_text">Undo Any Purchased Product</string>
    <string name="tap_to_undo_transsion_text">Tap On List Item and Click To Undo To Undo That!!!</string>
    <string name="pay_to_supplier_text">Pay To Supplier</string>
    <string name="pay_by_customer_text">Pay By Customer</string>
    <string name="supplier_name_text">Supplier Name</string>
    <string name="customer_name_text">Customer Name</string>
    <string name="amount_to_pay_text">Amount To Pay</string>
    <string name="remaining_amount_text">Remaining Amount</string>
    <string name="history_of_pay_text">History of Pay</string>
    <string name="history_of_buy_text">History of Buy</string>
    <string name="pay_text">Pay</string>
    <string name="history_of_sell_text">History of Sell</string>
    <string name="expenditure_text">Expenditure</string>
    <string name="money_text">Money</string>
    <string name="remark_text">Remark</string>
    <string name="product_mini_text">Prod.</string>
    <string name="customer_mini_text">Cus.</string>
    <string name="supplier_mini_text">Supp.</string>
    <string name="money_mini_text">Mon.</string>
    <string name="quantity_mini_text">Quan.</string>
    <string name="date_text">Date</string>
    <string name="mode_text">Mode</string>
    <string name="amount_text">Amount</string>
    <string name="back_text">Back</string>
    <string name="remaining_stock_text">Remaining Stock</string>
    <string name="search_text">Search</string>
    <string name="total_sell_text">Total Sell : </string>
    <string name="total_cash_sell_text">Total Cash Sell : </string>
    <string name="total_on_hold_sell_text">Total Borrow Sell :</string>
    <string name="total_buy_text">Total Buy : </string>
    <string name="total_cash_buy_text">Total Cash Buy : </string>
    <string name="total_on_hold_buy_text">Total Borrow Buy :</string>
    <string name="gross_profit_text">Gross Profit : </string>
    <string name="gross_profit_cash_text">Gross Profit Cash : </string>
    <string name="gross_profit_on_hold_text">Gross Profit Borrow :</string>
    <string name="gross_profit_on_hold_customer_pay_text">Gross Profit On Hold Customer Pay : </string>
    <string name="net_profit_text">Net Profit : </string>
    <string name="net_profit_cash_text" translatable="false">Net Profit Cash : </string>
    <string name="net_profit_on_hold_text" translatable="false">Net Profit On Hold : </string>
    <string name="net_profit_on_hold_customer_pay_text" translatable="false">Net Profit On Hold Customer Pay : </string>
    <string name="remaining_payment_for_supplier_text">Remaining Payment For Supplier : </string>
    <string name="remaining_profit_from_customer_text">Remaining Profit From Customer : </string>
    <string name="remaining_payment_from_customer_text">Remaining Payment From Customer : </string>
    <string name="total_expenditure_text">Total Expenditure : </string>
    <string name="remaining_net_profit_text" translatable="false">Remaining Net Profit : </string>
    <string name="hold_payment_paid_by_customer_text">"Loan amount deposited by the customer: "</string>
    <string name="hold_payment_paid_to_supplier_text">"Lending amount was deposited by the Supplier: "</string>
    <string name="total_money_text">Total Amount :</string>
    <string name="img_description_logo" translatable="false">Buy Sell Inventory</string>
    <string name="home1" translatable="false">ca-app-pub-2563796576069532/8644311746</string>
    <string name="home2" translatable="false">ca-app-pub-2563796576069532/2427291711</string>
    <string name="product" translatable="false">ca-app-pub-2563796576069532/5635005028</string>
    <string name="addProduct1" translatable="false">ca-app-pub-2563796576069532/9806184327</string>
    <string name="addProduct2" translatable="false">ca-app-pub-2563796576069532/4466243641</string>
    <string name="supplier" translatable="false">ca-app-pub-2563796576069532/5575295273</string>
    <string name="addSupplier1" translatable="false">ca-app-pub-2563796576069532/7315752358</string>
    <string name="addSupplier2" translatable="false">ca-app-pub-2563796576069532/5013038556</string>
    <string name="customer" translatable="false">ca-app-pub-2563796576069532/8264149744</string>
    <string name="addCustomer1" translatable="false">ca-app-pub-2563796576069532/5619527304</string>
    <string name="addCustomer2" translatable="false">ca-app-pub-2563796576069532/7619499525</string>
    <string name="buy1" translatable="false">ca-app-pub-2563796576069532/8418340211</string>
    <string name="buy2" translatable="false">ca-app-pub-2563796576069532/6913331634</string>
    <string name="historyBySupplier" translatable="false">ca-app-pub-2563796576069532/3254246080</string>
    <string name="historyByProduct" translatable="false">ca-app-pub-2563796576069532/6870412688</string>
    <string name="sell1" translatable="false">ca-app-pub-2563796576069532/5047793616</string>
    <string name="sell2" translatable="false">ca-app-pub-2563796576069532/6422377047</string>
    <string name="sellHistory" translatable="false">ca-app-pub-2563796576069532/4978800413</string>
    <string name="statement1" translatable="false">ca-app-pub-2563796576069532/4753469515</string>
    <string name="statement2" translatable="false">ca-app-pub-2563796576069532/7080852595</string>
    <string name="sDay1" translatable="false">ca-app-pub-2563796576069532/5036540542</string>
    <string name="sDay2" translatable="false">ca-app-pub-2563796576069532/4269365739</string>
    <string name="sDay3" translatable="false">ca-app-pub-2563796576069532/3289178751</string>
    <string name="sDay4" translatable="false">ca-app-pub-2563796576069532/9288035925</string>
    <string name="sDay5" translatable="false">ca-app-pub-2563796576069532/7943164663</string>
    <string name="sSearch1" translatable="false">ca-app-pub-2563796576069532/2481641343</string>
    <string name="sSearch2" translatable="false">ca-app-pub-2563796576069532/9558185581</string>
    <string name="sSearch3" translatable="false">ca-app-pub-2563796576069532/2961875699</string>
    <string name="sSearch4" translatable="false">ca-app-pub-2563796576069532/8593476328</string>
    <string name="sSearch5" translatable="false">ca-app-pub-2563796576069532/1836496280</string>
    <string name="stock" translatable="false">ca-app-pub-2563796576069532/5468619538</string>
    <string name="holders1" translatable="false">ca-app-pub-2563796576069532/1342753839</string>
    <string name="holders2" translatable="false">ca-app-pub-2563796576069532/3488682828</string>
    <string name="payToSupplier1" translatable="false">ca-app-pub-2563796576069532/7657359673</string>
    <string name="payToSupplier2" translatable="false">ca-app-pub-2563796576069532/1401096604</string>
    <string name="historyOfPaySupplier" translatable="false">ca-app-pub-2563796576069532/2077251008</string>
    <string name="historyOfBuySupplier" translatable="false">ca-app-pub-2563796576069532/3275261533</string>
    <string name="payByCustomer1" translatable="false">ca-app-pub-2563796576069532/6591211088</string>
    <string name="payByCustomer2" translatable="false">ca-app-pub-2563796576069532/6601452396</string>
    <string name="historyOfPayCustomer" translatable="false">ca-app-pub-2563796576069532/5880764649</string>
    <string name="historyOfSellCustomer" translatable="false">ca-app-pub-2563796576069532/8399116777</string>
    <string name="exp1" translatable="false">ca-app-pub-2563796576069532/3058503641</string>
    <string name="exp2" translatable="false">ca-app-pub-2563796576069532/9180402325</string>
    <string name="expHistory" translatable="false">ca-app-pub-2563796576069532/6946488204</string>
    <string name="profile1" translatable="false">ca-app-pub-2563796576069532/2851631846</string>
    <string name="profile2" translatable="false">ca-app-pub-2563796576069532/6768973354</string>
    <string name="i1" translatable="false">ca-app-pub-2563796576069532/7078350140</string>
    <string name="i2" translatable="false">ca-app-pub-2563796576069532/5197404213</string>
    <string name="i3" translatable="false">ca-app-pub-2563796576069532/7110085832</string>
    <string name="i4" translatable="false">ca-app-pub-2563796576069532/8718734879</string>
    <string name="i5" translatable="false">ca-app-pub-2563796576069532/7625145053</string>
    <string name="i6" translatable="false">ca-app-pub-2563796576069532/6504060101</string>
    <string name="verify_text">Verify</string>
    <string name="solve_msg">Solve It To Reset! 99+2+3+5=</string>
</resources>