<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusedByDefault="true"
    tools:context="com.sanshy.buysellinventory.Sell">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:visibility="gone"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/img_description_logo"/>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/sell1">
            </com.google.android.gms.ads.AdView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/sell_text"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="32sp" />

            <AutoCompleteTextView
                android:id="@+id/suggestion_box"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                
                android:background="@drawable/bluebox"
                android:completionThreshold="1"
                android:fontFamily="@font/acme"
                android:hint="@string/product_text"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/color_cursor"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:shadowColor="#000"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                
                android:background="@drawable/bluebox"
                android:ems="10"
                android:fontFamily="@font/acme"
                android:hint="@string/quantity_text"
                android:inputType="number"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/color_cursor"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:background="@drawable/bluebox"
                android:fontFamily="@font/acme"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:paddingTop="7sp"
                android:text="@string/price_text"
                android:textColor="#fff"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp">

                <RadioButton
                    android:id="@+id/cash_sell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/acme"
                    android:text="@string/cash_text"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/on_hold_sell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/acme"
                    android:text="@string/on_hold_text"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

            </RadioGroup>

            <AutoCompleteTextView
                android:id="@+id/suggestion_box2"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                
                android:background="@drawable/bluebox"
                android:completionThreshold="1"
                android:fontFamily="@font/acme"
                android:hint="@string/customer_name_text"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/color_cursor"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:shadowColor="#000"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="24sp" />

            <Button
                android:id="@+id/cancel11"
                android:layout_width="200sp"
                android:layout_height="70sp"
                android:background="@drawable/buttonorange"
                android:fontFamily="@font/acme"
                android:onClick="mySellList"
                android:text="@string/history_text"
                android:textColor="#fff"
                android:textSize="22sp" />

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/blueb"
                android:fontFamily="@font/acme"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="save"
                android:text="@string/save_text"
                android:textColor="#fff"
                android:textSize="40sp" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonorange"
                android:fontFamily="@font/acme"
                android:onClick="cancel"
                android:text="@string/cancel_text"
                android:textColor="#fff"
                android:textSize="40sp" />

            <Button
                android:id="@+id/undo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonorange"
                android:fontFamily="@font/acme"
                android:onClick="undoSell"
                android:text="@string/undo_sell_product"
                android:textColor="#fff"
                android:textSize="21sp" />

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/sell2">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
