<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sanshy.buysellinventory.Payment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:layout_margin="5sp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/img_description_logo"/>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/holders1">
        </com.google.android.gms.ads.AdView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/carter_one"
            android:text="@string/holders_text"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#71A6BE"
            android:textSize="32sp" />

        <Button
            android:id="@+id/cancel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonorange"
            android:fontFamily="@font/carter_one"
            android:gravity="center_vertical|center"
            android:onClick="PayToSupplier"
            android:text="@string/pay_to_supplier_text"
            android:textColor="#fff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/cancel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blueb"
            android:fontFamily="@font/carter_one"
            android:gravity="center_vertical|center"
            android:onClick="PayByCustomer"
            android:text="@string/pay_by_customer_text"
            android:textColor="#fff"
            android:textSize="24sp" />

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/holders2">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
