<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusedByDefault="true"
    tools:context="com.sanshy.buysellinventory.Buy">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:visibility="gone"
                app:srcCompat="@drawable/logo"
                android:contentDescription="@string/img_description_logo"/>

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/buy1">
            </com.google.android.gms.ads.AdView>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:text="@string/buy_text"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="32sp" />

            <AutoCompleteTextView
                android:id="@+id/suggestion_box"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                
                android:background="@drawable/bluebox"
                android:completionThreshold="1"
                android:cursorVisible="true"
                android:fontFamily="@font/acme"
                android:hint="@string/product_text"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:shadowColor="#000"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                
                android:background="@drawable/bluebox"
                android:ems="10"
                android:fontFamily="@font/acme"
                android:hint="@string/quantity_text"
                android:inputType="number"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/color_cursor"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:background="@drawable/bluebox"
                android:fontFamily="@font/acme"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:paddingTop="7sp"
                android:text="@string/price_text"
                android:textColor="#fff"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp">

                <RadioButton
                    android:id="@+id/cash_buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/acme"
                    android:text="@string/cash_text"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/on_hold_buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/acme"
                    android:text="@string/on_hold_text"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp" />

            </RadioGroup>

            <AutoCompleteTextView
                android:id="@+id/suggestion_box2"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                
                android:background="@drawable/bluebox"
                android:completionThreshold="1"
                android:cursorVisible="true"
                android:fontFamily="@font/acme"
                android:hint="@string/supplier_name_text"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:shadowColor="#000"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel10"
                    android:layout_width="200sp"
                    android:layout_height="70sp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonorange"
                    android:fontFamily="@font/acme"
                    android:onClick="supplierHistory"
                    android:text="@string/history_by_supplier_text"
                    android:textColor="#fff"
                    android:textSize="@dimen/between_small_and_medium" />

                <Button
                    android:id="@+id/cancel9"
                    android:layout_width="200sp"
                    android:layout_height="70sp"
                    android:layout_weight="1"
                    android:background="@drawable/buttonorange"
                    android:fontFamily="@font/acme"
                    android:onClick="productHistory"
                    android:text="@string/history_by_product_text"
                    android:textColor="#fff"
                    android:textSize="@dimen/between_small_and_medium" />
            </LinearLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/blueb"
                android:fontFamily="@font/acme"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="save"
                android:text="@string/save_text"
                android:textColor="#fff"
                android:textSize="40sp" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonorange"
                android:fontFamily="@font/acme"
                android:onClick="cancel"
                android:text="@string/cancel_text"
                android:textColor="#fff"
                android:textSize="40sp" />

            <Button
                android:id="@+id/undo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonorange"
                android:fontFamily="@font/acme"
                android:onClick="undo"
                android:text="@string/undo_buy_text"
                android:textColor="#fff"
                android:textSize="@dimen/medium_text" />
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="@string/buy2">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
