<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="24sp"
        android:text="@string/verify_text" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/solve_msg"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bluebox"
        android:cursorVisible="true"
        android:ems="10"
        android:fontFamily="@font/acme"
        android:hint="@string/write_here"
        android:inputType="number|numberDecimal"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="24sp" />

</LinearLayout>